--- a/Assignments/Assignment 1.ipynb
+++ b/Assignments/Assignment 1.ipynb
@@ -1112,6 +1112,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "25059f1b-25c3-47eb-8278-903bd7608576",
+   "metadata": {},
+   "source": [
+    "> **Exercise: Ready made data vs Custom made data** In this exercise, I want to make sure you have understood they key points of my lecture and the reading. \n",
+    ">\n",
+    "> 1. What are pros and cons of the custom-made data used in Centola's experiment (the first study presented in the lecture) and the ready-made data used in Nicolaides's study (the second study presented in the lecture)? You can support your arguments based on the content of the lecture and the information you read in Chapter 2.3 of the book __(answer in max 150 words)__.\n",
+    "> 2. How do you think these differences can influence the interpretation of the results in each study? __(answer in max 150 words)__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "654c7606-9542-4ecd-9f6e-1c5e298883d6",
    "metadata": {},
    "source": [
