--- a/Assignments/Assignment 1.ipynb
+++ b/Assignments/Assignment 1.ipynb
@@ -1115,9 +1115,7 @@
    "id": "25059f1b-25c3-47eb-8278-903bd7608576",
    "metadata": {},
    "source": [
-    "> **Exercise: Ready made data vs Custom made data** In this exercise, I want to make sure you have understood they key points of my lecture and the reading. \n",
-    ">\n",
-    "> 1. What are pros and cons of the custom-made data used in Centola's experiment (the first study presented in the lecture) and the ready-made data used in Nicolaides's study (the second study presented in the lecture)? You can support your arguments based on the content of the lecture and the information you read in Chapter 2.3 of the book __(answer in max 150 words)__.\n",
+    "> 1. Centola's experiment used custom made data, meaning the environment and interactions were fully designed by the researchers. One big pro is that they could presicely trach how people's behaviour spread and after identify which factors caused these shifts. By designing the setup themselves, they can minimize unpredictable outside factors that might otherwise blur the results. The downside is that this highly controlled setting may not fully represent real world situations very well, so the findings may be less generalizable. On the other hand, Nicolaide's study used data collected from real people's everyday interactions. This makes the results more realistic, since it shows how people behave without being prompted by an experiment. However, ready-made data often includes many uncontrollable variables, making it harder to specify what led to certain outcomes. Researchers also risk missing important details if the data was not gathered with their specific research questions in mind. \n",
     "> 2. How do you think these differences can influence the interpretation of the results in each study? __(answer in max 150 words)__"
    ]
   },
