part 3 full implementation

--- a/Assignments/Assignment 1.ipynb
+++ b/Assignments/Assignment 1.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b9ef9e6f",
    "metadata": {},
    "outputs": [
@@ -83,56 +83,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Claudia Wagner\n",
-      "Taha Yasseri\n",
-      "David Garcia\n",
-      "Milena Tsvetkova\n",
-      "Elisa Omodei\n",
-      "Sandra GonzalezBailón\n",
-      "Leo Ferres\n",
-      "Clara Vandeweerdt\n",
-      "Andreia Sofia Teixeira\n",
-      "Edward Lee\n",
-      "Luca Rossi\n",
-      "Jonas L Juul\n",
-      "Michele Coscia\n",
-      "Yelena Mejova\n",
-      "Michael Szell\n",
-      "Lisette Espin Noboa\n",
-      "Matteo Magnani\n",
-      "Onur Varol\n",
-      "Roberta Rocca\n",
-      "Talal Rahwan\n",
-      "Frauke Kreuter\n",
-      "Riccardo Di Clemente\n",
-      "Martin Ardvisson\n",
-      "Taha Yasseri\n",
-      "Michele Tizzoni\n",
-      "Daniele Quercia\n",
-      "Kokil Jaidka\n",
-      "Ingmar Weber\n",
-      "Claudia Acciai\n",
-      "Sandor Juhasz\n",
-      "Anna Sapienza\n",
-      "Yunkyu Sohn\n",
-      "Mathieu Génois\n",
-      "Alexander Gates\n",
-      "Vedran Sekara\n",
-      "Piotr Sapiezynski\n",
-      "Daniela Paolotti\n",
-      "Pantelis Pipergias Analytis\n",
-      "Michele Starnini\n",
-      "Kristina Gligoric\n",
-      "Rossano Schifanella\n",
-      "Petter Holme\n",
-      "Kyriaki Kalimeri\n",
-      "Bruno Lepri\n",
-      "Ivan Smirnov\n",
-      "Yevgeniy Golovchenko\n",
-      "Mikko Kivelä\n",
-      "Clemens Stachl\n",
-      "Maximilian Schich\n",
-      "Kelton Minor\n",
       "Number of unique names: 1523\n"
      ]
     }
@@ -259,152 +209,172 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f3064a48",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Retrieving Author Ids from web scraped names\n",
-    "# This can probably be massively improved upon\n",
-    "import pandas as pd\n",
-    "BASE_URL = 'https://api.openalex.org/'\n",
-    "RESOURCE = 'works'\n",
-    "complete_url = BASE_URL + RESOURCE\n",
-    "\n",
-    "base_url = \"https://api.openalex.org/authors\"\n",
-    "\n",
-    "author_ids = {}\n",
-    "n = len(unique_names)\n",
-    "i = 0\n",
-    "for name in unique_names:\n",
-    "    \n",
-    "    params = { # Query parameters. Added filter to only include authors who have published between 5 and 5000 works\n",
-    "        'filter': f'display_name.search:{name},works_count:>5|<5000'\n",
-    "    }\n",
-    "    \n",
-    "    # Send request to OpenAlex API\n",
-    "    response = requests.get(base_url, params=params)\n",
-    "    \n",
-    "    # Check if the request was successful\n",
-    "    if response.status_code == 200:\n",
-    "        data = response.json()\n",
-    "        if data['results']:\n",
-    "            author_ids[name] = data['results'][0]['id']\n",
-    "            print('Found id')\n",
-    "        else:\n",
-    "            print('No id found')\n",
-    "    else:\n",
-    "        print('Failed to retrieve')\n",
-    "    i += 1\n",
-    "    print(f'{i}/{n}')\n",
-    "\n",
-    "print(len(author_ids))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b097ae0b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Retrieving concept Ids from openalex for filtering\n",
-    "base_url = \"https://api.openalex.org/concepts\"\n",
-    "css_concept_names = ['Sociology', 'Psychology', 'Economics', 'Political Science']\n",
-    "css_concepts = []\n",
-    "quant_concept_names = ['Mathematics', 'Physics', 'Computer Science']\n",
-    "quant_concepts = []\n",
-    "for concept in css_concept_names:\n",
-    "    params = {'search' : concept,\n",
-    "              'filter' : 'level:0',\n",
-    "              'select' : 'id'}\n",
-    "    response = requests.get(base_url, params=params)\n",
-    "    id = response.json().get('results')[0]\n",
-    "    css_concepts.append(id.get('id'))\n",
-    "for concept in quant_concept_names:\n",
-    "    params = {'search' : concept,\n",
-    "              'filter' : 'level:0',\n",
-    "              'select' : 'id'}\n",
-    "    response = requests.get(base_url, params=params)\n",
-    "    id = response.json().get('results')[0]\n",
-    "    quant_concepts.append(id.get('id'))\n",
-    "css_concepts, quant_concepts"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "440db472",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 32/32 [00:04<00:00,  7.82it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing complete. Datasets saved.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Retrieving works from author ids\n",
-    "# Improvements would be to use batches of authors and not one by one, and maybe multiprocessing. Paging could maybe be implemented in a better and faster way\n",
+    "import pandas as pd\n",
+    "import requests\n",
     "import time\n",
-    "base_url = \"https://api.openalex.org/works\"\n",
+    "from joblib import Parallel, delayed\n",
+    "from tqdm import tqdm\n",
     "\n",
-    "df = pd.DataFrame()\n",
-    "n = len(author_ids)\n",
-    "i = 0\n",
-    "cursor = '*'\n",
+    "authors_data = pd.read_csv('authors_data_single_name_search.csv')\n",
     "\n",
-    "for ids in author_ids.values():\n",
-    "    t0 = time.time() # To ensure the rate limit is not exceeded\n",
+    "URL = \"https://api.openalex.org/works\"\n",
+    "\n",
+    "BATCH_SIZE = 20\n",
+    "\n",
+    "def fetch_papers_for_authors(authors_batch, batch_index, total_batches):\n",
+    "    papers_dataset = []\n",
+    "    abstract_dataset = []\n",
+    "\n",
+    "    author_filters = '|'.join([f\"\\\"{author_id}\\\"\" for author_id in authors_batch])\n",
     "    \n",
-    "    while cursor is not None: # Pagination\n",
-    "        params = {  # Query params. Filters are works with < 10 authors, cited > 10 times, and within the concepts specified above\n",
-    "            'filter'    : f'authorships.author.id:{ids},authors_count:<10,cited_by_count:>10,concepts.id:{\"|\".join(css_concepts)},concepts.id:{\"|\".join(quant_concepts)}',\n",
-    "            'select'    : 'id,title,publication_year,cited_by_count,authorships,abstract_inverted_index',\n",
-    "            'per_page'  : 200,\n",
-    "            'cursor'    : cursor # for pagination\n",
-    "            }\n",
-    "        response = requests.get(base_url, params=params)\n",
-    "        \n",
-    "        # print(\"Request URL:\", response.url)  # For debugging\n",
-    "        if response.status_code == 200:\n",
+    "    page = 1\n",
+    "    while True:\n",
+    "        params = {\n",
+    "            \"filter\": f\"authorships.author.id:\\\"{author_filters}\\\",cited_by_count:>10,authors_count:<10\",\n",
+    "            \"per_page\": 200,\n",
+    "            \"page\": page\n",
+    "        }\n",
+    "\n",
+    "        max_retries = 3\n",
+    "        for attempt in range(max_retries):\n",
     "            try:\n",
-    "                data = response.json().get('results', [])\n",
-    "                if not data: # check if any works where found\n",
-    "                    if cursor == '*': print(\"No works found for this author.\")\n",
+    "                response = requests.get(URL, params=params, timeout=10).json()\n",
+    "                break \n",
+    "            except requests.exceptions.RequestException:\n",
+    "                if attempt < max_retries - 1:\n",
+    "                    time.sleep(5) \n",
     "                else:\n",
-    "                    print(f'Found {response.json().get(\"meta\").get(\"count\")} works')\n",
-    "                    for work in data:\n",
-    "                        auth_ids = [author.get('author').get('id') for author in work.get('authorships')]\n",
-    "                        \n",
-    "                        work_dict = { # Creating dict for dataframe\n",
-    "                            'id'                        : work.get('id'),\n",
-    "                            'title'                     : work.get('title'),\n",
-    "                            'publication_year'          : work.get('publication_year'),\n",
-    "                            'cited_by_count'            : work.get('cited_by_count'),\n",
-    "                            'author_ids'                : auth_ids,\n",
-    "                            'abstract_inverted_index'    : work.get('abstract_inverted_index')\n",
-    "                        }\n",
-    "                        # Add to DataFrame\n",
-    "                        new_df = pd.DataFrame([work_dict])\n",
-    "                        df = pd.concat([df,new_df], ignore_index=True)\n",
-    "            except Exception as e:\n",
-    "                print('Error in data extraction:', e)\n",
-    "        else:\n",
-    "            print(\"Failed to retrieve data:\", response.status_code, response.text)\n",
-    "        # Update cursor to select the next set of pages\n",
-    "        cursor = response.json().get('meta').get('next_cursor')\n",
-    "    cursor = '*'\n",
-    "    i += 1\n",
-    "    print(f'{i}/{n}')\n",
-    "    \n",
-    "    # To ensure the rate limit is not exceeded\n",
-    "    t = time.time()\n",
-    "    if t-t0 < 0.1:\n",
-    "        time.sleep(0.1 - (t-t0))\n",
-    "        \n",
-    "# Removing any duplicates        \n",
-    "df = df.drop_duplicates(subset=['id'], keep='first').reset_index(drop=True)\n",
+    "                    return [], [], f\"Skipping batch {batch_index} due to repeated request failures.\"\n",
     "\n",
-    "# Creating datasets and storing them\n",
-    "IC2S2_papers_dataset = df[['id', 'publication_year', 'cited_by_count', 'author_ids']]\n",
-    "IC2S2_abstracts_dataset = df[['id', 'title', 'abstract_inverted_index']]\n",
-    "IC2S2_papers_dataset.to_pickle('IC2S2_papers_dataset.pkl')\n",
-    "IC2S2_abstracts_dataset.to_pickle('IC2S2_abstracts_dataset.pkl')\n"
+    "    \n",
+    "        if 'results' not in response or not response['results']:\n",
+    "            break\n",
+    "\n",
+    "        for paper in response['results']:\n",
+    "            first_concept, second_concept = False, False\n",
+    "\n",
+    "            for concept in paper.get('concepts', []):\n",
+    "                if concept.get('level') != 0:\n",
+    "                    continue\n",
+    "                if concept.get('display_name') in ['Sociology', 'Psychology', 'Economics', 'Political Science']:\n",
+    "                    first_concept = True\n",
+    "                if concept.get('display_name') in ['Mathematics', 'Computer Science', 'Physics']:\n",
+    "                    second_concept = True\n",
+    "\n",
+    "            if not (first_concept and second_concept):\n",
+    "                continue\n",
+    "\n",
+    "            paper_info = {\n",
+    "                'id': paper.get('id'),\n",
+    "                'publication_year': paper.get('publication_year'),\n",
+    "                'cited_by_count': paper.get('cited_by_count'),\n",
+    "                'author_ids': ', '.join([author['author']['id'] for author in paper.get('authorships', [])]),\n",
+    "            }\n",
+    "            papers_dataset.append(paper_info)\n",
+    "\n",
+    "            abstract_info = {\n",
+    "                'id': paper.get('id'),\n",
+    "                'title': paper.get('title'),\n",
+    "                'abstract_inverted_index': paper.get('abstract_inverted_index', '')\n",
+    "            }\n",
+    "            abstract_dataset.append(abstract_info)\n",
+    "\n",
+    "        page += 1\n",
+    "\n",
+    "    return papers_dataset, abstract_dataset\n",
+    "\n",
+    "valid_authors = authors_data[(authors_data['works_count'] >= 5) & (authors_data['works_count'] <= 5000)]['id'].tolist()\n",
+    "\n",
+    "batches = [valid_authors[i:i + BATCH_SIZE] for i in range(0, len(valid_authors), BATCH_SIZE)]\n",
+    "\n",
+    "# Run in parallel\n",
+    "num_cores = 12  # Adjust based on your CPU\n",
+    "results = Parallel(n_jobs=num_cores)(\n",
+    "    delayed(fetch_papers_for_authors)(batch, idx, len(batches))\n",
+    "    for idx, batch in tqdm(enumerate(batches), total=len(batches))\n",
+    ")\n",
+    "\n",
+    "papers_dataset = [paper for res in results for paper in res[0]]\n",
+    "abstract_dataset = [abstract for res in results for abstract in res[1]]\n",
+    "\n",
+    "df_papers = pd.DataFrame(papers_dataset)\n",
+    "df_abstracts = pd.DataFrame(abstract_dataset)\n",
+    "\n",
+    "df_papers.to_csv('papers_dataset.csv', index=False)\n",
+    "df_abstracts.to_csv('abstracts_dataset.csv', index=False)\n",
+    "\n",
+    "print(\"Processing complete. Datasets saved.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "8673d596",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3797 3797\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(df_papers), len(df_abstracts))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "bfd04484",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3104"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_papers['author_ids'].nunique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de03470d",
+   "metadata": {},
+   "source": [
+    "There are 3797 works listed in my IC2S2 papers dataframe. Here there are 3104 unique co-authors for these works.\n",
+    "\n",
+    "To improve the efficiency of the code, joblib.parallel was implemented, which gave the biggest boost in efficiency. Searching for multiple authors at the same time also helped a lot, where it was chosen to search for 20 authors at a time, since this would be a very stable yet still effective number. I also added error handling & retries to prevent failures, so that if the api failed, it could just be retried, and the entire program wouldn't have to restart.\n",
+    "\n",
+    "For the choices of filtering, keeping the works count for an author between 5 and 5000 makes sure that we only have serious authors that both have actually contributed and also don't just put their name on anything. The filter that papers needed at least 10 citations is done to show that the papers have an actual impact, and the co-authors to fewer than 10 filter highlights more focused research. We also filtered for topics in computational social science, like sociology and somputer science, to keep the dataset relevant. However, this can make it so ones with topics in different fields that might still have great impact on computational social science, are filtered out."
    ]
   },
   {
@@ -480,7 +450,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
