--- a/Assignments/Assignment 1.ipynb
+++ b/Assignments/Assignment 1.ipynb
@@ -427,11 +427,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "35130cc2-dbf6-42db-8901-2475ede6444d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Co-authorship network saved as JSON!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import networkx as nx\n",
+    "import json\n",
+    "from itertools import combinations\n",
+    "\n",
+    "papers_df = pd.read_csv('papers_dataset.csv', header=0, dtype=str) \n",
+    "papers_df.columns = [\"id\",\"publication_year\",\"cited_by_count\",\"author_ids\"]\n",
+    "\n",
+    "authors_df = pd.read_csv('authors_data_single_name_search.csv')\n",
+    "\n",
+    "papers_df[\"cited_by_count\"] = pd.to_numeric(papers_df[\"cited_by_count\"], errors=\"coerce\").fillna(0).astype(int)\n",
+    "\n",
+    "papers_df[\"publication_year\"] = pd.to_numeric(papers_df[\"publication_year\"], errors=\"coerce\").fillna(0).astype(int)\n",
+    "\n",
+    "coauthor_counts = {}\n",
+    "author_citations = {}\n",
+    "author_first_pub_year = {}\n",
+    "\n",
+    " \n",
+    "for _, row in papers_df.iterrows():\n",
+    "    if pd.isna(row[\"author_ids\"]):\n",
+    "        continue\n",
+    "    \n",
+    "    author_list = [author.strip() for author in row[\"author_ids\"].split(\",\")]\n",
+    "    author_list = list(set(author_list)) \n",
+    "\n",
+    "    \n",
+    "    for author in author_list:\n",
+    "        author_citations[author] = author_citations.get(author, 0) + row[\"cited_by_count\"]\n",
+    "        \n",
+    "        if author not in author_first_pub_year:\n",
+    "            author_first_pub_year[author] = row[\"publication_year\"]\n",
+    "        else:\n",
+    "            author_first_pub_year[author] = min(author_first_pub_year[author], row[\"publication_year\"])\n",
+    "\n",
+    "    for author1, author2 in combinations(sorted(author_list), 2):\n",
+    "        coauthor_counts[(author1, author2)] = coauthor_counts.get((author1, author2), 0) + 1\n",
+    "\n",
+    "weighted_edgelist = [(author1, author2, weight) for (author1, author2), weight in coauthor_counts.items()]\n",
+    "\n",
+    "G = nx.Graph()\n",
+    "\n",
+    "G.add_weighted_edges_from(weighted_edgelist)\n",
+    "\n",
+    "for _, row in authors_df.iterrows():\n",
+    "    author_name = row[\"display_name\"].strip()\n",
+    "    author_id = row[\"id\"]\n",
+    "    \n",
+    "    if author_id in G.nodes:\n",
+    "        G.nodes[author_id][\"display_name\"] = author_name\n",
+    "        G.nodes[author_id][\"country\"] = row.get(\"country_code\", \"Unknown\")\n",
+    "        G.nodes[author_id][\"citation_count\"] = author_citations.get(author_id, 0)\n",
+    "        G.nodes[author_id][\"first_pub_year\"] = author_first_pub_year.get(author_id, \"Unknown\")\n",
+    "\n",
+    "graph_data = nx.node_link_data(G)\n",
+    "\n",
+    "with open(\"coauthorship_network.json\", \"w\") as f:\n",
+    "    json.dump(graph_data, f, indent=4)\n",
+    "\n",
+    "print(\"✅ Co-authorship network saved as JSON!\")\n"
+   ]
   }
  ],
  "metadata": {
