--- a/Assignments/Assignment 1.ipynb
+++ b/Assignments/Assignment 1.ipynb
@@ -25,7 +25,7 @@
    "id": "323be069",
    "metadata": {},
    "source": [
-    "Link to Git repository: \n",
+    "Link to Git repository: https://github.com/cruesli/CSS_group13\n",
     "\n",
     "# Contributions\n",
     "\n",
