--- a/Assignments/Assignment 2.ipynb
+++ b/Assignments/Assignment 2.ipynb
@@ -63,6 +63,52 @@
     "> * Now, write a function to generate a Random Network that mirrors the Computational Social Scientists network in terms of node count, using your calculated _p_. Generate a random network by linking nodes in every possible pair with probability _p_. **Hint**: you can use the function [``np.random.uniform``](https://numpy.org/doc/stable/reference/random/generated/numpy.random.uniform.html) to draw samples from a uniform probability distribution.   \n",
     "> * Visualize the network as you did for the Computational Social Scientists network in the exercise above (my version is below). \n",
     ">\n",
+
+{
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "dccc2205",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3728432566746901"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Part 1\n",
+    "import numpy as np\n",
+    "def get_country_assortativity_coef(G):\n",
+    "    degrees = dict(G.degree())\n",
+    "    E = len(G.edges())\n",
+    "\n",
+    "    same_country = 0\n",
+    "    for (i, j) in list(G.edges()): # Compute total amount of edges between nodes of same type\n",
+    "        if G.nodes[i].get('country_code') == G.nodes[j].get('country_code'):\n",
+    "            same_country += 1/E\n",
+    "            \n",
+    "    degs = np.array(list(degrees.values()))\n",
+    "    total_half_stubs = sum(degs)\n",
+    "    country_deg_sum = {}\n",
+    "    for node, data in S.nodes(data=True): # sum up amount of nodes with each country code\n",
+    "        country = data.get('country_code')\n",
+    "        country_deg_sum[country] = country_deg_sum.get(country, 0) + degrees[node]\n",
+    "    \n",
+    "    # Expected fraction of edges between nodes of same type\n",
+    "    exp_same_country = sum((country_half_stubs/total_half_stubs)**2 for country_half_stubs in country_deg_sum.values())\n",
+    "    # Compute assortative coefficient \n",
+    "    r = (same_country - exp_same_country)/(1-exp_same_country)\n",
+    "    return r\n",
+    "r_CSS = get_country_assortativity_coef(S)\n",
+    "r_CSS"
+   ]
+  },
     "> * Answer the following questions __(max 200 words in total)__: \n",
     ">    - What regime does your random network fall into? Is it above or below the critical threshold?  \n",
     ">    - According to the textbook, what does the network's structure resemble in this regime?  \n",
