--- a/Assignments/Assignment 2.ipynb
+++ b/Assignments/Assignment 2.ipynb
@@ -81,6 +81,91 @@
     "\n"
    ]
   },
+{
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "dccc2205",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3728432566746901"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Part 1\n",
+import csv
+import ast
+import networkx as nx
+import numpy as np
+
+def main():
+    authors_csv_path = 'final_authors.csv'
+    papers_csv_path  = 'final_papers.csv'
+    
+    author_index = {}
+    with open(authors_csv_path, 'r', encoding='utf-8') as f:
+        reader = csv.DictReader(f)
+        for idx, row in enumerate(reader):
+            a_id = row['id'].strip()
+            author_index[a_id] = idx
+    N = len(author_index)
+    print(f"Number of unique authors (nodes): {N}")
+
+    edges = set()
+    with open(papers_csv_path, 'r', encoding='utf-8') as f:
+        reader = csv.DictReader(f)
+        for row in reader:
+            authors_of_paper = ast.literal_eval(row['author_ids'])
+            for i in range(len(authors_of_paper)):
+                for j in range(i+1, len(authors_of_paper)):
+                    a_i = author_index.get(authors_of_paper[i])
+                    a_j = author_index.get(authors_of_paper[j])
+                    if a_i is None or a_j is None:
+                        continue
+                    edges.add((min(a_i, a_j), max(a_i, a_j)))
+    
+    G_real = nx.Graph()
+    G_real.add_nodes_from(range(N)) 
+    G_real.add_edges_from(edges)
+    
+    L = G_real.number_of_edges()
+    print(f"Number of edges in the real co-author network: {L}")
+
+    if N > 1:
+        p = (2.0 * L) / (N*(N-1))
+    else:
+        p = 0.0
+    print(f"Erdős–Rényi probability p to match real edge count: {p:.6f}")
+
+    G_rand = nx.erdos_renyi_graph(N, p)
+    L_rand = G_rand.number_of_edges()
+    print(f"One realization of G(N,p) has {L_rand} edges")
+
+    components_real = sorted(nx.connected_components(G_real), key=len, reverse=True)
+    giant_real = G_real.subgraph(components_real[0])  # largest connected component
+    avg_sp_real = nx.average_shortest_path_length(giant_real)
+    
+    components_rand = sorted(nx.connected_components(G_rand), key=len, reverse=True)
+    giant_rand = G_rand.subgraph(components_rand[0])
+    avg_sp_rand = nx.average_shortest_path_length(giant_rand)
+    
+    print(f"Giant component size (real network): {giant_real.number_of_nodes()}")
+    print(f"Giant component size (random network): {giant_rand.number_of_nodes()}")
+    print(f"Average shortest path (real giant):   {avg_sp_real:.4f}")
+    print(f"Average shortest path (random giant): {avg_sp_rand:.4f}")
+
+if __name__ == '__main__':
+    main()
+   ]
+  },
+
   {
    "cell_type": "markdown",
    "id": "15efbdea",
