--- a/Assignments/Assignment 2.ipynb
+++ b/Assignments/Assignment 2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "8ecd8738",
    "metadata": {},
    "outputs": [],
@@ -59,8 +59,96 @@
     ">\n",
     ">\n",
     "> 1. _Random Network_: Let's start by building a Random Network, acting as a baseline (or [\"null model\"](https://en.wikipedia.org/wiki/Null_model)) to understand the Computational Social Scientists Network better.  \n",
-    "> * First, calculate the probability (_p_) that makes the expected number of edges in our random network match the actual edge count in the Computational Social Scientists network. Refer to equation 3.2 in your Network Science textbook for guidance. After finding _p_, figure out the average degree (using the given formula). \n",
-    "> * Now, write a function to generate a Random Network that mirrors the Computational Social Scientists network in terms of node count, using your calculated _p_. Generate a random network by linking nodes in every possible pair with probability _p_. **Hint**: you can use the function [``np.random.uniform``](https://numpy.org/doc/stable/reference/random/generated/numpy.random.uniform.html) to draw samples from a uniform probability distribution.   \n",
+    "> * First, calculate the probability (_p_) that makes the expected number of edges in our random network match the actual edge count in the Computational Social Scientists network. Refer to equation 3.2 in your Network Science textbook for guidance. After finding _p_, figure out the average degree (using the given formula). \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "6ef46e14",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'final_authors.csv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [4], line 37\u001b[0m\n\u001b[0;32m     34\u001b[0m                         G\u001b[38;5;241m.\u001b[39madd_edge(a_i, a_j)\n\u001b[0;32m     35\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m G\n\u001b[1;32m---> 37\u001b[0m authors, a_index \u001b[38;5;241m=\u001b[39m \u001b[43mread_authors\u001b[49m\u001b[43m(\u001b[49m\u001b[43mauthors_csv_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     38\u001b[0m N \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(a_index)\n\u001b[0;32m     39\u001b[0m G_css \u001b[38;5;241m=\u001b[39m build_coauthor_graph(papers_csv_path, a_index)\n",
+      "Cell \u001b[1;32mIn [4], line 13\u001b[0m, in \u001b[0;36mread_authors\u001b[1;34m(author_csv_path)\u001b[0m\n\u001b[0;32m     11\u001b[0m authors \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m     12\u001b[0m author_index \u001b[38;5;241m=\u001b[39m {}\n\u001b[1;32m---> 13\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mauthor_csv_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mencoding\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mutf-8\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m     14\u001b[0m     reader \u001b[38;5;241m=\u001b[39m csv\u001b[38;5;241m.\u001b[39mDictReader(f)\n\u001b[0;32m     15\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m idx, row \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(reader):\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'final_authors.csv'"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "import ast\n",
+    "import networkx as nx\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "authors_csv_path = 'final_authors.csv'\n",
+    "papers_csv_path  = 'final_papers.csv'\n",
+    "\n",
+    "def read_authors(author_csv_path):\n",
+    "    authors = []\n",
+    "    author_index = {}\n",
+    "    with open(author_csv_path, 'r', encoding='utf-8') as f:\n",
+    "        reader = csv.DictReader(f)\n",
+    "        for idx, row in enumerate(reader):\n",
+    "            a_id = row['id'].strip()\n",
+    "            author_index[a_id] = idx\n",
+    "            authors.append(a_id)\n",
+    "    return authors, author_index\n",
+    "\n",
+    "def build_coauthor_graph(paper_csv_path, author_index):\n",
+    "    G = nx.Graph()\n",
+    "    G.add_nodes_from(author_index.values())\n",
+    "    \n",
+    "    with open(paper_csv_path, 'r', encoding='utf-8') as f:\n",
+    "        reader = csv.DictReader(f)\n",
+    "        for row in reader:\n",
+    "            authors_of_paper = ast.literal_eval(row['author_ids'])\n",
+    "            for i in range(len(authors_of_paper)):\n",
+    "                for j in range(i+1, len(authors_of_paper)):\n",
+    "                    a_i = author_index.get(authors_of_paper[i])\n",
+    "                    a_j = author_index.get(authors_of_paper[j])\n",
+    "                    if a_i is not None and a_j is not None:\n",
+    "                        G.add_edge(a_i, a_j)\n",
+    "    return G\n",
+    "\n",
+    "authors, a_index = read_authors(authors_csv_path)\n",
+    "N = len(a_index)\n",
+    "G_css = build_coauthor_graph(papers_csv_path, a_index)\n",
+    "L = G_css.number_of_edges()\n",
+    "print(f\"CSS network has {N} nodes, {L} edges.\")\n",
+    "\n",
+    "\n",
+    "if N > 1:\n",
+    "    p = (2.0 * L) / (N*(N-1))\n",
+    "else:\n",
+    "    p = 0.0\n",
+    "print(f\"Probability p = {p:.6f}\")\n",
+    "\n",
+    "\n",
+    "G_rand = nx.erdos_renyi_graph(N, p)\n",
+    "print(f\"Random G(N,p) has {G_rand.number_of_edges()} edges (one realization).\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94653590",
+   "metadata": {},
+   "source": [
+    "> * Now, write a function to generate a Random Network that mirrors the Computational Social Scientists network in terms of node count, using your calculated _p_. Generate a random network by linking nodes in every possible pair with probability _p_. **Hint**: you can use the function [``np.random.uniform``](https://numpy.org/doc/stable/reference/random/generated/numpy.random.uniform.html) to draw samples from a uniform probability distribution.   \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f49e1c7f",
+   "metadata": {},
+   "source": [
     "> * Visualize the network as you did for the Computational Social Scientists network in the exercise above (my version is below). \n",
     ">\n",
     "> * Answer the following questions __(max 200 words in total)__: \n",
@@ -76,9 +164,7 @@
     "> * Add two vertical lines showing the average degree for the random and the real network. \n",
     "> * Answer the following questions __(max 200 words in total)__: \n",
     ">    - Does the average degree meaningfully represents the network's characteristics, especially in light of the insights gained from exploring heavy-tailed distributions? Discuss its adequacy or limitations in capturing the essence of the network's structural properties. \n",
-    ">    - What differences can you observe between the real and the random distributions? How does the shape of the degree distribution for each network inform us about the network's properties? (max 150 words)\n",
-    "\n",
-    "\n"
+    ">    - What differences can you observe between the real and the random distributions? How does the shape of the degree distribution for each network inform us about the network's properties? (max 150 words)"
    ]
   },
   {
@@ -125,10 +211,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "3f6022db",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'coauthorship_network.json'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [8], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnetwulf\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Open and read the JSON file\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mcoauthorship_network.json\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[0;32m      6\u001b[0m     data \u001b[38;5;241m=\u001b[39m json\u001b[38;5;241m.\u001b[39mload(file)\n\u001b[0;32m      8\u001b[0m G \u001b[38;5;241m=\u001b[39m nx\u001b[38;5;241m.\u001b[39mnode_link_graph(data, edges\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlinks\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'coauthorship_network.json'"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "import networkx as nx\n",
@@ -522,7 +620,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
